# AVSHOMEWORK

./: CMakeLists.txt
data/: cartoon.h  container.h  documentary.h  game.h  movie.h
rnd_files/: rnd.h
