cmake_minimum_required(VERSION 3.20)
project(AVSHOMEWORK)

set(CMAKE_CXX_STANDARD 17)

add_executable(AVSHOMEWORK main.cpp data/cartoon.cpp data/cartoon.h data/game.cpp data/game.h data/documentary.cpp data/documentary.h data/movie.cpp data/movie.h rnd_files/rnd.cpp rnd_files/rnd.h data/container.cpp data/container.h)
